# axelar-btc

./: .gitignore  Cargo.toml  README.md
scripts/: consolidation.py
src/: lib.rs  main.rs  multisig_prover.rs  user.rs  validator.rs
